<resources>
    <string name="app_name">Foodingo</string>
    <string name="MenuOrder">Order</string>
    <string name="MenuGoOut">Go Out</string>
    <string name="MenuEntertainment">Entertain</string>
    <string name="MenuExplore">Explore</string>
    <string name="MenuSpace">Space</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_order">Order</string>
    <string name="title_go_out">Go Out</string>
    <string name="title_entertain">Entertain</string>
    <string name="title_explore">Explore</string>
    <string name="title_spaces">Spaces</string>
    <string name="translate">Translate</string>
    <string name="day_night_title">Day/Night</string>
    <string name="user_profile_title">User profile</string>
    <string name="user_profile_content_descript">User profile</string>
    <string name="day_night_content_description">Day/Night</string>
    <string name="search_location">Search location</string>
    <string name="address">Borivali, Mumbai, Maharashtra</string>
    <string name="search_hint">Restaurant, cuisine, market,movie and more.</string>
</resources>