<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/MenuOrder" />
    <item
        android:id="@+id/goOut"
        android:icon="@drawable/ic_baseline_food_bank_24"
        android:title="@string/MenuGoOut" />
    <item
        android:id="@+id/entertainment"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/MenuEntertainment" />
    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/MenuExplore" />
    <item
        android:id="@+id/spaces"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:title="@string/MenuSpace" />

</menu>